--- a/TTSTwitterAVD/src/main/resources/templates/feed.html
+++ b/TTSTwitterAVD/src/main/resources/templates/feed.html
@@ -5,18 +5,32 @@
 
     <title id="title">Feed</title>
 
-    <div th:replace="/fragments/headlinks :: head-styles" ></div>
+    <!--  <div th:replace="/fragments/headlinks :: head-styles" ></div>-->
 
 </head>
 <body>
 
 <div th:replace="fragments/navbar"></div>
+<ul class="nav nav-tabs">
+    <li role="presentation" th:classappend="${filter == 'all' ? 'active' : '' }">
+        <a href="/tweets">All</a></li>
+    <li role="presentation" th:classappend="${filter == 'following' ? 'active' : '' }">
+        <a href="/tweets?filter=following">Following</a></li>
+</ul><br/>
+<div th:if="${#lists.isEmpty(tweetList) and filter == 'all'}">
+    <h3>No tweets have been created yet</h3>
+</div>
+<div th:if="${#lists.isEmpty(tweetList) and filter == 'following'}">
+    <h3>No tweets have been created by your followers</h3>
+</div>
 <div class="container">
     <h2>Tweets containing #<span th:text="${tag}"></span></h2>
     <div class="list-group" th:each="tweet:${tweetList}">
         <div class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between">
-                <a class="username" th:href="@{/users/} + ${tweet.user.username}">@<span th:text="${tweet.user.username}"></span></a><small> <span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small>
+                <!--        change the date to tweets.data-->
+                <a class="username" th:href="@{/users/} + ${tweet.user.username}">@<span
+                        th:text="${tweet.user.username}"></span></a><small> <span th:text="${tweet.date}"></span></small>
             </div>
             <p class="mb-1" th:utext="${tweet.message}"></p>
         </div>
