--- a/TTSTwitterAVD/src/main/resources/templates/login.html
+++ b/TTSTwitterAVD/src/main/resources/templates/login.html
@@ -1,15 +1,12 @@
-
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html xmlns:th="http://www.w3.org/1999/xhtml" >
 
 <head>
     <title>Log in</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-    <link rel="stylesheet" href="../static/custom.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="../static/custom.js"></script>
+    <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+    <!--    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">-->
+    <!--    <link rel="stylesheet" href="../static/custom.css">-->
+
 </head>
 <body>
 <div class="container">
@@ -23,6 +20,12 @@
         </div>
         <button class="btn btn-md btn-success btn-block" name="Submit" value="Login" type="Submit">Log in</button>
     </form>
+    <form th:action="@{/signup}" method="post"><br/>
+        <button class="btn btn-warning btn-lg twitter-btn" name="Submit" value="Submit" type="Submit">Sign up</button>
+    </form>
 </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="../static/custom.js"></script>
 </html>
